<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_mode">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_android_developer" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="developer_email" translatable="false">evstigneevstas@gmail.com</string>
    <string name="message_to_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_to_support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement" translatable="false">https://www.yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="unknown">неизвестно</string>
    <string name="in_developing">Раздел в разработке...</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="medialibrary_empty">Ваша медиатека пуста</string>
    <string name="no_playlist_available">Вы не создали \n ни одного плейлиста</string>
    <string name="create">Создать</string>
    <string name="playlist_title">Название*</string>
    <string name="description">Описание</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="image_not_chosen">Изображение не выбрано</string>
    <string name="exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="exit_dialog_quit">Завершить</string>
    <string name="exit_dialog_cancel">Отмена</string>
    <string name="exit_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="track">трек</string>
    <string name="track_genitive">трека</string>
    <string name="tracks_genitive">треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="track_is_already_in_PL">Трек уже добавлен в плейлист</string>
    <string name="minute">минута</string>
    <string name="minute_genitive">минуты</string>
    <string name="minutes_genitive">минут</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="confirm_track_removal">Вы уверены, что хотите удалить трек из плейлиста</string>
    <string name="remove">Удалить</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="confirm_playlist_removal">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>


</resources>