<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:title="@string/settings">

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_list_marginTop"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsItemsText"
            android:layout_marginVertical="@dimen/theme_switcher_marginVertical"
            android:layout_marginStart="@dimen/theme_switcher_marginStart"
            android:layout_marginEnd="@dimen/theme_switcher_marginEnd"
            android:text="@string/night_mode" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switcherNightTheme"
            style="@style/SettingsSwitchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        style="@style/SettingsItemsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsItemsText"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/ivShareSettings"
            style="@style/SettingsItemsIcons"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsItemsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsItemsText"
            android:text="@string/contact_support" />

        <ImageView
            android:id="@+id/ivSupportSettings"
            style="@style/SettingsItemsIcons"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsItemsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsItemsText"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/ivUserAgreementSettings"
            style="@style/SettingsItemsIcons"
            android:src="@drawable/ic_arrow_forward" />

    </LinearLayout>


</LinearLayout>