<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingBottom="28dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_margin_bottom"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/header_padding_vertical"
        android:paddingStart="@dimen/header_padding_start"
        android:paddingEnd="@dimen/header_padding_end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/heading_margin_start"
            android:layout_marginTop="@dimen/heading_margin_top"
            android:layout_marginBottom="@dimen/heading_margin_bottom"
            android:layout_weight="1"
            android:lineHeight="@dimen/font_line_height_heading"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_heading">

        </TextView>


    </LinearLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_button"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:lineHeight="@dimen/font_line_height_heading"
        android:paddingHorizontal="@dimen/padding_horizontal_button"
        android:text="@string/search"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_heading"
        app:cornerRadius="@dimen/corner_radius_button"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding_button_end"
        app:iconSize="@dimen/icon_size_button"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_mediateka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_button"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:lineHeight="@dimen/font_line_height_heading"
        android:paddingHorizontal="@dimen/padding_horizontal_button"
        android:text="@string/mediateka"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_heading"
        app:cornerRadius="@dimen/corner_radius_button"
        app:icon="@drawable/mediateka"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding_button_end"
        app:iconSize="@dimen/icon_size_button"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_button"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:lineHeight="@dimen/font_line_height_heading"
        android:paddingHorizontal="@dimen/padding_horizontal_button"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_heading"
        app:cornerRadius="@dimen/corner_radius_button"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding_button_end"
        app:iconSize="@dimen/icon_size_button"
        app:iconTint="@color/black" />


</LinearLayout>