<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context=".ui.createplaylist.CreatePlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/new_playlist"
            app:titleTextAppearance="@style/ToolbarTitle">

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/addPlaylistCover"
            android:layout_width="@dimen/image_picker_image_width"
            android:layout_height="@dimen/image_picker_image_height"
            android:layout_gravity="center"
            android:background="@drawable/background_corners_8dp"
            android:scaleType="centerCrop"
            android:layout_marginHorizontal="@dimen/image_picker_marginHorizontal"
            android:layout_marginTop="@dimen/image_picker_marginTop"
            android:src="@drawable/playlist_img_picker"
            android:clipToOutline="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTitle"
            style="@style/CreatePlaylistInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_playlist_text_input_title_marginTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPlaylistCover">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/playlist_title"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/CreatePlaylistInputTextAppearance">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            style="@style/CreatePlaylistInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_playlist_text_input_description_marginTop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/description"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/CreatePlaylistInputTextAppearance"
                tools:text="rrtgrrtr">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCreate"
            style="@style/CreatePlaylistButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:enabled="false"
            android:text="@string/create"
            android:textAppearance="@style/CreatePlaylistButtonTextAppearance">

        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>


</ScrollView>


