<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/borderTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/borderBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/borderLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/borderRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TrackDataBorderLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TrackDataBorderRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />


    <ImageView
        android:id="@+id/iv_arrowReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_return_marginStart"
        android:padding="@dimen/icon_return_padding"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toTopOf="@id/iv_playerArtwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/borderTop"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <ImageView
        android:id="@+id/iv_playerArtwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/audio_player_artWork_marginTop"
        android:scaleType="centerInside"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_trackName"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/borderRight"
        app:layout_constraintStart_toStartOf="@+id/borderLeft"
        app:layout_constraintTop_toBottomOf="@+id/iv_arrowReturn"
        app:layout_constraintVertical_chainStyle="spread"
        tools:src="@drawable/img_player_album_placeholder" />

    <TextView
        android:id="@+id/tv_trackName"
        style="@style/AudioPlayerTrackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/audio_player_trackName_marginTop"
        app:layout_constraintBottom_toTopOf="@+id/tv_artistName"
        app:layout_constraintEnd_toStartOf="@+id/borderRight"
        app:layout_constraintStart_toEndOf="@+id/borderLeft"
        app:layout_constraintTop_toBottomOf="@+id/iv_playerArtwork"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/tv_artistName"
        style="@style/AudioPlayerArtistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/audio_player_artistName_marginTop"
        app:layout_constraintBottom_toTopOf="@id/iv_playButton"
        app:layout_constraintEnd_toStartOf="@+id/borderRight"
        app:layout_constraintStart_toStartOf="@+id/borderLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_trackName"
        tools:text="The Beatles" />


    <ImageView
        android:id="@+id/iv_playButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/audio_player_playButton_marginTop"
        android:src="@drawable/ic_play_button"
        app:layout_constraintBottom_toTopOf="@id/tv_trackPlaybackTimer"
        app:layout_constraintEnd_toStartOf="@id/iv_addToFavoritesButton"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@id/iv_addToPlaylistButton"
        app:layout_constraintTag="playButton"
        app:layout_constraintTop_toBottomOf="@id/tv_artistName" />


    <ImageView
        android:id="@+id/iv_addToPlaylistButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_add_to_playlist"
        app:layout_constraintBottom_toBottomOf="@+id/iv_playButton"
        app:layout_constraintEnd_toStartOf="@+id/iv_playButton"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/borderLeft"
        app:layout_constraintTop_toTopOf="@+id/iv_playButton" />

    <ImageView
        android:id="@+id/iv_addToFavoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_is_not_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/iv_playButton"
        app:layout_constraintEnd_toStartOf="@+id/borderRight"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toEndOf="@+id/iv_playButton"
        app:layout_constraintTop_toTopOf="@+id/iv_playButton" />

    <TextView
        android:id="@+id/tv_trackPlaybackTimer"
        style="@style/AudioPlayerTrackTimeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/audio_player_trackTimeRemaining_marginTop"
        app:layout_constraintBottom_toTopOf="@id/trackDataTopBarrier"
        app:layout_constraintEnd_toStartOf="@+id/borderRight"
        app:layout_constraintStart_toStartOf="@+id/borderLeft"
        app:layout_constraintTag="trackRemainingTime"
        app:layout_constraintTop_toBottomOf="@+id/iv_playButton"
        tools:text="0:30" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/trackDataTopBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_tags="trackRemainingTime" />


    <TextView
        android:id="@+id/tv_duration"
        style="@style/AudioPlayerTrackDataItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/tv_album"
        app:layout_constraintEnd_toStartOf="@+id/tv_trackDuration"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/TrackDataBorderLeft"
        app:layout_constraintTop_toBottomOf="@+id/trackDataTopBarrier"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_trackDuration"
        style="@style/AudioPlayerTrackData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_trackAlbum"
        app:layout_constraintEnd_toStartOf="@+id/TrackDataBorderRight"
        app:layout_constraintStart_toEndOf="@id/tv_duration"
        app:layout_constraintTop_toBottomOf="@+id/trackDataTopBarrier"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="5:35" />

    <TextView
        android:id="@+id/tv_album"
        style="@style/AudioPlayerTrackDataItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/tv_year"
        app:layout_constraintEnd_toStartOf="@+id/tv_trackAlbum"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/TrackDataBorderLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

    <TextView
        android:id="@+id/tv_trackAlbum"
        style="@style/AudioPlayerTrackData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_trackYear"
        app:layout_constraintEnd_toStartOf="@+id/TrackDataBorderRight"
        app:layout_constraintStart_toEndOf="@id/tv_album"
        app:layout_constraintTop_toBottomOf="@+id/tv_trackDuration"
        tools:text="Yesterday (Remastered 2009)" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/trackAlbumGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="tv_album, tv_trackAlbum" />

    <TextView
        android:id="@+id/tv_year"
        style="@style/AudioPlayerTrackDataItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/tv_genre"
        app:layout_constraintEnd_toStartOf="@+id/tv_trackYear"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/TrackDataBorderLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_album" />

    <TextView
        android:id="@+id/tv_trackYear"
        style="@style/AudioPlayerTrackData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_trackGenre"
        app:layout_constraintEnd_toStartOf="@+id/TrackDataBorderRight"
        app:layout_constraintStart_toEndOf="@id/tv_year"
        app:layout_constraintTop_toBottomOf="@+id/tv_trackAlbum"
        tools:text="1965" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/AudioPlayerTrackDataItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/tv_country"
        app:layout_constraintEnd_toStartOf="@+id/tv_trackGenre"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/TrackDataBorderLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_year" />

    <TextView
        android:id="@+id/tv_trackGenre"
        style="@style/AudioPlayerTrackData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_trackCountry"
        app:layout_constraintEnd_toStartOf="@+id/TrackDataBorderRight"
        app:layout_constraintStart_toEndOf="@id/tv_genre"
        app:layout_constraintTop_toBottomOf="@+id/tv_trackYear"
        tools:text="Rock" />

    <TextView
        android:id="@+id/tv_country"
        style="@style/AudioPlayerTrackDataItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toTopOf="@id/borderBottom"
        app:layout_constraintEnd_toStartOf="@+id/tv_trackCountry"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/TrackDataBorderLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <TextView
        android:id="@+id/tv_trackCountry"
        style="@style/AudioPlayerTrackData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/borderBottom"
        app:layout_constraintEnd_toStartOf="@+id/TrackDataBorderRight"
        app:layout_constraintStart_toEndOf="@id/tv_country"
        app:layout_constraintTop_toBottomOf="@+id/tv_trackGenre"
        tools:text="Великобритания" />


</androidx.constraintlayout.widget.ConstraintLayout>